Fix hover actions getting cut off

--- a/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_panel.scss
+++ b/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_panel.scss
@@ -4,7 +4,8 @@
   margin-top: $euiSizeS;
 
   .embPanel__content,
-  .dshDashboardGrid__item--highlighted,
+  .dshDashboardGrid__item,
+  .embPanel__hoverActionsAnchor,
   .lnsExpressionRenderer {
     border-radius: 0;
   }
